Created card template

--- a/index.html
+++ b/index.html
@@ -8,20 +8,80 @@
   </head>
   <body>
     <header>
-      <nav class="container">
-        <div id="mainheader">
-          <a href="#">Gym Workout</a>
+      <nav class="header-container">
+        <div class="header-left">
+          <a href="#" class="site-title">Gym Workout</a>
         </div>
-        <div class="otherheaders">
+
+        <div class="header-center">
           <a href="workouts.html">Workouts</a>
           <a href="build.html">Build</a>
           <a href="history.html">History</a>
         </div>
-        <div id="shoppingcart"><img src="images/shoppingcart.png" /></div>
-        <div id="exerciseCard">
-            
+
+        <div class="header-right">
+          <a href="#"
+            ><img
+              src="images/settings.png"
+              alt="Settings"
+              class="settings-icon"
+          /></a>
         </div>
       </nav>
     </header>
+
+    <div id="main-body" class="full-width">
+      <div class="exercise-card">
+        <div class="exercise-card-header full-width">
+          <div class="exercise-name"><h2>Dumbbell Press</h2></div>
+          <div class="exercise-sets"><p>3x10</p></div>
+          <div class="exercise-rest"><p>1 min rest</p></div>
+        </div>
+        <div class="exercise-card-sub-header full-width">
+          <h3>Reps</h3>
+          <h3>Weight (lbs)</h3>
+        </div>
+        <div class="exercise-card-splits">
+          <div class="exercise-card-individual-split">
+            <input type="text" placeholder="10" />
+            <input type="text" placeholder="100" />
+          </div>
+          <div class="exercise-card-individual-split">
+            <input type="text" placeholder="10" />
+            <input type="text" placeholder="100" />
+          </div>
+          <div class="exercise-card-individual-split">
+            <input type="text" placeholder="10" />
+            <input type="text" placeholder="100" />
+          </div>
+        </div>
+      </div>
+
+      <div class="exercise-card">
+        <div class="exercise-card-header full-width">
+          <div class="exercise-name"><h2>Dumbbell Press</h2></div>
+          <div class="exercise-sets"><p>3x10</p></div>
+          <div class="exercise-rest"><p>1 min rest</p></div>
+        </div>
+        <div class="exercise-card-sub-header full-width">
+          <h3>Reps</h3>
+          <h3>Weight (lbs)</h3>
+        </div>
+        <div class="exercise-card-splits">
+          <div class="exercise-card-individual-split">
+            <input type="text" placeholder="10" />
+            <input type="text" placeholder="100" />
+          </div>
+          <div class="exercise-card-individual-split">
+            <input type="text" placeholder="10" />
+            <input type="text" placeholder="100" />
+          </div>
+          <div class="exercise-card-individual-split">
+            <input type="text" placeholder="10" />
+            <input type="text" placeholder="100" />
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
