Fixed ok button

--- a/welcome.html
+++ b/welcome.html
@@ -12,8 +12,8 @@
       <div id="question-options"></div>
       <!-- Options go here -->
       <div id="go-button-container">
-        <button id="go-button" class="go-button" style="display: none">
-          Go
+        <button id="ok-button" class="ok-button" style="display: none">
+          Ok
         </button>
       </div>
     </div>
