--- a/workout.html
+++ b/workout.html
@@ -64,7 +64,7 @@
         class="done-button"
         type="submit"
         value="NEXT >"
-        onclick="doneHistory()"
+        onclick=""
       />
     </div>
   </body>
