--- a/workout.html
+++ b/workout.html
@@ -10,35 +10,13 @@
     <div id="main-body" class="full-width">
       <div class="exercise-card">
         <div class="exercise-card-header full-width">
-          <div class="exercise-name"><h2>Dumbbell Press</h2></div>
-          <div class="exercise-sets"><h3>3x10</h3></div>
-          <div class="exercise-rest"><h3>3 min rest</h3></div>
-        </div>
-        <div class="exercise-card-sub-header full-width">
-          <h3>Reps</h3>
-          <h3>Weight (lbs)</h3>
-        </div>
-        <div class="exercise-card-splits">
-          <div class="exercise-card-individual-split">
-            <input type="number" placeholder="3" min="0" />
-            <input type="number" placeholder="100" min="0" step="5" />
+          <div class="exercise-name">
+            <h2 class="exercise-name">Biceps Curls</h2>
           </div>
-          <div class="exercise-card-individual-split">
-            <input type="number" placeholder="3" min="0" />
-            <input type="number" placeholder="100" min="0" step="5" />
+          <div class="exercise-rest">
+            <button class="rest-button">Rest</button>
+            <div class="exercise-timer">3:00</div>
           </div>
-          <div class="exercise-card-individual-split">
-            <input type="number" placeholder="3" min="0" />
-            <input type="number" placeholder="100" min="0" step="5" />
-          </div>
-        </div>
-      </div>
-
-      <div class="exercise-card">
-        <div class="exercise-card-header full-width">
-          <div class="exercise-name"><h2>Biceps Curls</h2></div>
-          <div class="exercise-sets"><h3>3x10</h3></div>
-          <div class="exercise-rest"><h3>2 min rest</h3></div>
         </div>
         <div class="exercise-card-sub-header full-width">
           <h3>Reps</h3>
