Working on timer

--- a/workout.html
+++ b/workout.html
@@ -14,8 +14,7 @@
             <h2 class="exercise-name">Biceps Curls</h2>
           </div>
           <div class="exercise-rest">
-            <button class="rest-button">Rest</button>
-            <div class="exercise-timer">3:00</div>
+            <button class="rest-button">Rest Timer</button>
           </div>
         </div>
         <div class="exercise-card-sub-header full-width">
@@ -38,12 +37,7 @@
         </div>
       </div>
       <script src="index2.js"></script>
-      <input
-        class="done-button"
-        type="submit"
-        value="NEXT >"
-        onclick=""
-      />
+      <input class="done-button" type="submit" value="NEXT >" onclick="" />
     </div>
   </body>
 </html>
