--- a/finalPage.html
+++ b/finalPage.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Fitness Victory!</title>
+    <title>Loyola Fitness</title>
     <style>
       body {
         display: flex;
@@ -25,7 +25,7 @@
       }
 
       .congrats-message span {
-        color: #ff6600;
+        color: #34791f;
       }
 
       @keyframes fadeIn {
