--- a/finalPage.html
+++ b/finalPage.html
@@ -25,7 +25,7 @@
       }
 
       .congrats-message span {
-        color: #34791f;
+        color: rgb(0, 255, 128);
       }
 
       @keyframes fadeIn {
@@ -67,7 +67,7 @@
       }
 
       .confetti:nth-child(even) {
-        background-color: #34791f; /* Kettlebells */
+        background-color: rgb(0, 255, 128); /* Kettlebells */
         transform: scale(1.2);
       }
 
