--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
         <button id="ok-button" class="ok-button" style="display: none">
           Ok
         </button>
+        <button id="back-button" style="display: block">Back</button>
       </div>
     </div>
-
     <script src="exercises.js"></script>
     <script src="index.js"></script>
   </body>
