--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
+    <!-- Question Container -->
     <div id="question-container">
       <h2 id="question"></h2>
       <!-- Question goes here -->
@@ -18,6 +19,14 @@
         <button id="back-button" style="display: block">Back</button>
       </div>
     </div>
+
+    <!-- Loading Screen (Initially Hidden) -->
+    <div id="loading-screen" style="display: none">
+      <div class="loader"></div>
+      <p>Generating Workout...</p>
+    </div>
+
+    <!-- Load JavaScript Files -->
     <script src="exercises.js"></script>
     <script src="index.js"></script>
   </body>
