--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
       <!-- Question goes here -->
       <div id="question-options"></div>
       <!-- Options go here -->
-      <div id="go-button-container">
+      <div class="ok-button-container">
+        <button id="back-button" style="display: block">Back</button>
         <button id="ok-button" class="ok-button" style="display: none">
           Ok
         </button>
-        <button id="back-button" style="display: block">Back</button>
       </div>
     </div>
 
