Added loading and other things

--- a/index.html
+++ b/index.html
@@ -20,10 +20,13 @@
       </div>
     </div>
 
-    <!-- Loading Screen (Initially Hidden) -->
-    <div id="loading-screen" style="display: none">
-      <div class="loader"></div>
-      <p>Generating Workout...</p>
+    <div id="loading-container" style="display: none">
+      <div class="dot-container">
+        <div class="dot"></div>
+        <div class="dot"></div>
+        <div class="dot"></div>
+      </div>
+      <h2>Creating Workout...</h2>
     </div>
 
     <!-- Load JavaScript Files -->
