Added error message

--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
       <!-- Question goes here -->
       <div id="question-options"></div>
       <!-- Options go here -->
+      <p
+        id="error-message"
+        style="color: rgb(225, 0, 0); margin: 15px 0; display: none"
+      ></p>
       <div class="ok-button-container">
         <button id="back-button" style="display: block">Back</button>
         <button id="ok-button" class="ok-button" style="display: none">
