--- a/finalPage.html
+++ b/finalPage.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Loyola Fitness</title>
+    <link rel="icon" type="image/x-icon" href="/images/iconImage.jpg" />
     <style>
       body {
         display: flex;
