--- a/finalPage.html
+++ b/finalPage.html
@@ -61,7 +61,6 @@
         }
       }
 
-      /* Create gym-themed confetti */
       .confetti:nth-child(odd) {
         background-color: #ffffff; /* Dumbbells */
         transform: rotate(45deg);
@@ -72,7 +71,6 @@
         transform: scale(1.2);
       }
 
-      /* Scatter confetti dynamically */
       .confetti:nth-child(1) {
         left: 5%;
         animation-delay: 0s;
@@ -123,14 +121,14 @@
 
       .button-flow {
         display: flex;
-        flex-direction: column;
         justify-content: center;
         align-items: center;
         margin-top: 20px;
         animation: fadeIn 2s ease-in-out;
       }
 
-      .reset {
+      .reset,
+      .back-home {
         background-color: green;
         width: 130%;
         padding: 1rem;
@@ -143,9 +141,29 @@
         margin: 1rem 0 0 0;
       }
 
-      .reset:hover {
+      .reset:hover,
+      .back-home:hover {
         box-shadow: 0 4px 10px rgba(0, 128, 0, 1);
         background-color: rgb(0, 150, 0);
+      }
+
+      .email-container {
+        margin-top: 20px;
+        text-align: center;
+      }
+
+      .email-container input {
+        padding: 0.5rem;
+        border-radius: 0.5rem;
+        border: none;
+        width: 300px;
+        font-size: 1rem;
+        text-align: center;
+      }
+
+      .email-container input:focus {
+        outline: none;
+        box-shadow: 0 0 5px rgba(0, 255, 128, 0.7);
       }
     </style>
   </head>
@@ -167,12 +185,21 @@
       <div class="confetti"></div>
       <div class="confetti"></div>
       <div class="confetti"></div>
+
+      <!-- Email Input -->
+      <div class="email-container">
+        <label for="email">Enter your email:</label><br />
+        <input type="email" id="email" placeholder="example@email.com" />
+      </div>
+
       <div class="button-flow">
         <button class="reset" onclick="window.location.href='index.html'">
-          Create New Workout
+          New Workout
+        </button>
+        <button class="back-home" onclick="window.location.href='home.html'">
+          Home
         </button>
       </div>
     </div>
   </body>
-  <footer></footer>
 </html>
