--- a/workout.html
+++ b/workout.html
@@ -9,7 +9,7 @@
   <body>
     <div id="main-body" class="full-width">
       <button class="ok-finish" onclick="window.location.href='finalPage.html'">
-        FINISH
+        Finish
       </button>
     </div>
 
