--- a/workout.html
+++ b/workout.html
@@ -8,8 +8,18 @@
   </head>
   <body>
     <div id="main-body" class="full-width">
-      <button class="ok-finish" onclick="window.location.href='finalPage.html'">
-        Finish
+      <!-- START TIMER BUTTON ABOVE THE CARDS -->
+      <button id="start-timer-button" class="ok-finish start-button">
+        START
+      </button>
+
+      <!-- THIS BUTTON STAYS BELOW THE CARDS -->
+      <button
+        id="finish-button"
+        class="ok-finish"
+        onclick="window.location.href='finalPage.html'"
+      >
+        FINISH
       </button>
     </div>
 
