--- a/finalPage.html
+++ b/finalPage.html
@@ -200,7 +200,7 @@
         <button class="reset" onclick="window.location.href='index.html'">
           New Workout
         </button>
-        <button class="back-home" onclick="window.location.href='home.html'">
+        <button class="back-home" onclick="window.location.href='landing.html'">
           Home
         </button>
       </div>
